# pydantic_schemaorg

./: .gitignore  LICENSE.md  README.md  dev_requirements.txt  pyproject.toml  requirements.txt
pydantic_schema_org/: 3DModel.py  AMRadioChannel.py  APIReference.py  Abdomen.py  AboutPage.py  AcceptAction.py  Accommodation.py  AccountingService.py  AchieveAction.py  Action.py  ActionAccessSpecification.py  ActionStatusType.py  ActivateAction.py  ActivationFee.py  ActiveActionStatus.py  ActiveNotRecruiting.py  AddAction.py  AdministrativeArea.py  AdultEntertainment.py  AdvertiserContentArticle.py  AerobicActivity.py  AggregateOffer.py  AggregateRating.py  AgreeAction.py  Airline.py  Airport.py  AlbumRelease.py  AlignmentObject.py  AllWheelDriveConfiguration.py  AllergiesHealthAspect.py  AllocateAction.py  AmpStory.py  AmusementPark.py  AnaerobicActivity.py  AnalysisNewsArticle.py  AnatomicalStructure.py  AnatomicalSystem.py  Anesthesia.py  AnimalShelter.py  Answer.py  (+1275 more)
pydantic_schemaorg/: 3DModel.py  AMRadioChannel.py  APIReference.py  Abdomen.py  AboutPage.py  AcceptAction.py  Accommodation.py  AccountingService.py  AchieveAction.py  Action.py  ActionAccessSpecification.py  ActionStatusType.py  ActivateAction.py  ActivationFee.py  ActiveActionStatus.py  ActiveNotRecruiting.py  AddAction.py  AdministrativeArea.py  AdultEntertainment.py  AdvertiserContentArticle.py  AerobicActivity.py  AggregateOffer.py  AggregateRating.py  AgreeAction.py  Airline.py  Airport.py  AlbumRelease.py  AlignmentObject.py  AllWheelDriveConfiguration.py  AllergiesHealthAspect.py  AllocateAction.py  (+1304 more)
(+17 files in other folders)
